--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Night Dahlia</title>
-    <link rel="stylesheet" href="./dahliaReset.css" type="text/css">
-    <link rel="stylesheet" href="./dahlia.css" type="text/css">
+    <link rel="stylesheet" href="dahliaReset.css" type="text/css">
+    <link rel="stylesheet" href="dahlia.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Junge|Raleway|Yanone+Kaffees|Handlee" rel="stylesheet">
   </head>
   <body>
@@ -12,10 +12,10 @@
       <nav>
         <ul>
           <span>@nightdahlia</span>
-          <a href="./index.html"><span>Home</span></a>
-          <a href="./generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
-          <a href="./videos.html"><span>Videos</span></a>
-          <a href="./aboutMe.html"><span>About Me</span></a>
+          <a href="index.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
         </ul>
       </nav>
     </div>
@@ -26,12 +26,12 @@
         </ul>
         <br>
         <ul>
-          <a href="./dahlia.html"><span>Home</span></a>
-          <a href="./generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+          <a href="dahlia.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
         </ul>
         <ul>
-          <a href="./videos.html"><span>Videos</span></a>
-          <a href="./aboutMe.html"><span>About Me</span></a>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
         </ul>
       </nav>
     </div>
@@ -67,7 +67,7 @@
       <span>Howdy there, stranger!</span>
     </div>
     <div id="welcome">
-      <img src="./Photos/deerInPathway.JPG" alt="deer in pathway">
+      <img src="deerInPathway.JPG" alt="deer in pathway">
     </div>
     <div id="gnome">
       <span><p>Thou hast cometh to the right place</p></span>
@@ -83,17 +83,17 @@
     <p class="scroll">Scroll the boxes to see more of each story!</p>
     <div class="links">
       <div class="story" id="strangeAttraction">
-        <a href="./Stories/Strange_Attraction.html"><span>Strange Attraction</span></a><br>
+        <a href="Strange_Attraction.html"><span>Strange Attraction</span></a><br>
         <p>Thunder grumbled in the distance, its angry echoes reverberating over the
         mountaintop and into the nearby valley. The forest below awoke from its
         slumber at the sound. A shiver rolled through the trees, sending silent
         whispers with the wind as leaves rustled about. It was 8:30 PM, and the
         night was darker than usual. Much darker. Blackness cloaked everything,
         pervaded everything, was everything. The moon was nowhere to be seen,
-        its luminescence hidden by stormy clouds...(<a href="./Stories/Strange_Attraction.html">read more</a>)</p>
+        its luminescence hidden by stormy clouds...(<a href="Strange_Attraction.html">read more</a>)</p>
       </div>
       <div class="story" id="foodFreedom">
-        <a href="./Stories/Food_Freedom.html"><span>Food Freedom</span></a><br>
+        <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
         <p>The marshmallow climbed out of his bag, turning the air around him sweet and delightful.<br>
         "Oh my!" He exclaimed. "I must be brave in this new world."<br><br>
         And so, he began exploring the kitchen. Strolling past a bag of little
@@ -102,41 +102,41 @@
         Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
         Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
         "My, oh my, what an excellent idea," he thought to himself...
-        (<a href="./Stories/Food_Freedom.html">read more</a>)</p>
+        (<a href="Food_Freedom.html">read more</a>)</p>
       </div>
       <div class="story" id="chimneySweep">
-        <a href="./Stories/The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
+        <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
         <p>The air was frigid, as was the chimney sweep's heart. Standing atop
         mansions, cleaning the nobility's chimneys was cumbersome work.
         Especially during the winter. His clothes were always soiled, smeared
         with black soot. His face, normally pale as snow, took on the ashen hue
         of someone who had already lost everything...
-        (<a href="./Stories/The_Chimney_Sweep.html">read more</a>)</p>
+        (<a href="The_Chimney_Sweep.html">read more</a>)</p>
       </div>
     </div>
     <div class="links">
       <div class="story" id="marigold">
-        <a href="./Stories/Marigold.html"><span>Marigold</span></a><br>
+        <a href="Marigold.html"><span>Marigold</span></a><br>
         <p>...this story has yet to be born...<br><br>
           expected due date: May 16, 2019</p>
-        <!--(<a href="./Marigold.html">read more</a>)</p>-->
+        <!--(<a href="Marigold.html">read more</a>)</p>-->
       </div>
     </div>
     <!-- ********* smallerStories ******** -->
     <div class="smallerLinks">
       <div>
         <div class="smallerStory" id="strangeAttraction">
-          <a href="./Stories/Strange_Attraction.html"><span>Strange Attraction</span></a><br>
+          <a href="Strange_Attraction.html"><span>Strange Attraction</span></a><br>
           <p>Thunder grumbled in the distance, its angry echoes reverberating over the
           mountaintop and into the nearby valley. The forest below awoke from its
           slumber at the sound. A shiver rolled through the trees, sending silent
           whispers with the wind as leaves rustled about. It was 8:30 PM, and the
           night was darker than usual. Much darker. Blackness cloaked everything,
           pervaded everything, was everything. The moon was nowhere to be seen,
-          its luminescence hidden by stormy clouds...(<a href="./Stories/Strange_Attraction.html">read more</a>)</p>
+          its luminescence hidden by stormy clouds...(<a href="Strange_Attraction.html">read more</a>)</p>
         </div>
         <div class="smallerStory" id="foodFreedom">
-          <a href="./Stories/Food_Freedom.html"><span>Food Freedom</span></a><br>
+          <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
           <p>The marshmallow climbed out of his bag, turning the air around him sweet and delightful.<br>
           "Oh my!" He exclaimed. "I must be brave in this new world."<br><br>
           And so, he began exploring the kitchen. Strolling past a bag of little
@@ -145,24 +145,24 @@
           Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
           Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
           "My, oh my, what an excellent idea," he thought to himself...
-          (<a href="./Stories/Food_Freedom.html">read more</a>)</p>
+          (<a href="Food_Freedom.html">read more</a>)</p>
         </div>
       </div>
       <div>
         <div class="smallerStory" id="chimneySweep">
-          <a href="./Stories/The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
+          <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
           <p>The air was frigid, as was the chimney sweep's heart. Standing atop
           mansions, cleaning the nobility's chimneys was cumbersome work.
           Especially during the winter. His clothes were always soiled, smeared
           with black soot. His face, normally pale as snow, took on the ashen hue
           of someone who had already lost everything...
-          (<a href="./Stories/The_Chimney_Sweep.html">read more</a>)</p>
+          (<a href="The_Chimney_Sweep.html">read more</a>)</p>
         </div>
         <div class="smallerStory" id="marigold">
-          <a href="./Stories/Marigold.html"><span>Marigold</span></a><br>
+          <a href="Marigold.html"><span>Marigold</span></a><br>
           <p>...this story has yet to be born...<br><br>
             expected due date: May 16, 2019</p> -->
-          <!--(<a href="./Marigold.html">read more</a>)</p>-->
+          <!--(<a href="Marigold.html">read more</a>)</p>-->
         </div>
       </div>
     </div> <!-- ******** ********* -->
