--- a/generalWriting.html
+++ b/generalWriting.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Nonsensical Tidbits of Gibberish (@nightdahlia)</title>
-    <link rel="stylesheet" href="./dahliaReset.css" type="text/css">
-    <link rel="stylesheet" href="./dahlia.css" type="text/css">
+    <link rel="stylesheet" href="dahliaReset.css" type="text/css">
+    <link rel="stylesheet" href="dahlia.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Handlee" rel="stylesheet">
   </head>
   <body>
@@ -12,10 +12,10 @@
       <nav>
         <ul>
           <span>@nightdahlia</span>
-          <a href="./index.html"><span>Home</span></a>
-          <a href="./generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
-          <a href="./videos.html"><span>Videos</span></a>
-          <a href="./aboutMe.html"><span>About Me</span></a>
+          <a href="index.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
         </ul>
       </nav>
     </div>
@@ -26,12 +26,12 @@
         </ul>
         <br>
         <ul>
-          <a href="./dahlia.html"><span>Home</span></a>
-          <a href="./generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+          <a href="dahlia.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
         </ul>
         <ul>
-          <a href="./videos.html"><span>Videos</span></a>
-          <a href="./aboutMe.html"><span>About Me</span></a>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
         </ul>
       </nav>
     </div>
