--- a/Strange_Attraction.html
+++ b/Strange_Attraction.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Strange Attraction - Part 1: Vanessa (@nightdahlia)</title>
-    <link rel="stylesheet" href="../dahliaReset.css" type="text/css">
-    <link rel="stylesheet" href="../dahlia.css" type="text/css">
+    <link rel="stylesheet" href="dahliaReset.css" type="text/css">
+    <link rel="stylesheet" href="dahlia.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Junge|Raleway|Handlee" rel="stylesheet">
   </head>
   <body>
@@ -12,10 +12,10 @@
       <nav>
         <ul>
           <span>@nightdahlia</span>
-          <a href="../index.html"><span>Home</span></a>
-          <a href="../generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
-          <a href="../videos.html"><span>Videos</span></a>
-          <a href="../aboutMe.html"><span>About Me</span></a>
+          <a href="index.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
         </ul>
       </nav>
     </div>
@@ -26,12 +26,12 @@
         </ul>
         <br>
         <ul>
-          <a href="../dahlia.html"><span>Home</span></a>
-          <a href="../generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+          <a href="dahlia.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
         </ul>
         <ul>
-          <a href="../videos.html"><span>Videos</span></a>
-          <a href="../aboutMe.html"><span>About Me</span></a>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
         </ul>
       </nav>
     </div>
@@ -417,7 +417,7 @@
          <a href="Marigold.html"><span>Marigold</span></a><br>
          <p>...this story has yet to be born...<br><br>
            expected due date: May 16, 2019</p>
-         <!--(<a href="./Marigold.html">read more</a>)</p>-->
+         <!--(<a href="Marigold.html">read more</a>)</p>-->
        </div>
      </div>
      <!-- ********* smallerStories ******** -->
@@ -450,7 +450,7 @@
            <a href="Marigold.html"><span>Marigold</span></a><br>
            <p>...this story has yet to be born...<br><br>
              expected due date: May 16, 2019</p>
-           <!--(<a href="./Marigold.html">read more</a>)</p>-->
+           <!--(<a href="Marigold.html">read more</a>)</p>-->
          </div>
        </div>
      </div> <!-- ******** ********* -->
