--- a/videos.html
+++ b/videos.html
@@ -26,7 +26,7 @@
         </ul>
         <br>
         <ul>
-          <a href="dahlia.html"><span>Home</span></a>
+          <a href="index.html"><span>Home</span></a>
           <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
         </ul>
         <ul>
