--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <!-- Welcome -->
     <div id="howdy">
-      <span>Howdy there, stranger!</span>
+      <span><p>Howdy there, stranger!</p></span>
     </div>
     <div id="welcome">
       <img src="deerInPathway.JPG" alt="deer in pathway">
