--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
         whispers with the wind as leaves rustled about. It was 8:30 PM, and the
         night was darker than usual. Much darker. Blackness cloaked everything,
         pervaded everything, was everything. The moon was nowhere to be seen,
-        its luminescence hidden by stormy clouds...(<a href="Strange_Attraction.html">read more</a>)</p>
+        its luminescence hidden by stormy clouds.<br ><br >
+        Thunder rumbled again, this time louder. Its doomful sound became one
+        with the night, inspiring fear in everything around. The katydids&#39;
+        incessant buzzing stopped abruptly. The barn owls took shelter under
+        their wings. All was quiet except for the murmur of the trees. Something
+        ominous was here, a baleful sense of fate perhaps, just waiting for the
+        right soul to wander in and meet its demise...(<a href="Strange_Attraction.html">read more</a>)</p>
       </div>
       <div class="story" id="foodFreedom">
         <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
@@ -101,7 +107,14 @@
         "My, oh my," he thought. "Those poor little succulents, stuck in there..."<br>
         Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
         Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
-        "My, oh my, what an excellent idea," he thought to himself...
+        "My, oh my, what an excellent idea," he thought to himself.<br><br>
+        And so, without further ado, he released the chocolate chips.<br>
+        Down and down they poured, out of the bag and all over the countertop,
+        their squeals of joy high-pitched and annoying.<br><br>
+
+        The marshmallow smiled and applauded himself for this act of justice.
+        Keeping food locked up in bags was foul, the epitome of injustice.<br>
+        Who would do such a thing?...
         (<a href="Food_Freedom.html">read more</a>)</p>
       </div>
       <div class="story" id="chimneySweep">
@@ -110,7 +123,12 @@
         mansions, cleaning the nobility's chimneys was cumbersome work.
         Especially during the winter. His clothes were always soiled, smeared
         with black soot. His face, normally pale as snow, took on the ashen hue
-        of someone who had already lost everything...
+        of someone who had already lost everything.<br><br>
+        He guessed he had. Standing this particular morning, on the Grand Duke's
+        chimney, he felt weary. The sun had not yet risen, and the air was cold.
+        This was his favorite time of day. Nobody else was awake, giving him time
+        to look up at the sky as dawn approached. He could see a faint glimmer of
+        stars, fading as the sun slowly started to rise...
         (<a href="The_Chimney_Sweep.html">read more</a>)</p>
       </div>
     </div>
@@ -133,7 +151,13 @@
           whispers with the wind as leaves rustled about. It was 8:30 PM, and the
           night was darker than usual. Much darker. Blackness cloaked everything,
           pervaded everything, was everything. The moon was nowhere to be seen,
-          its luminescence hidden by stormy clouds...(<a href="Strange_Attraction.html">read more</a>)</p>
+          its luminescence hidden by stormy clouds.<br ><br >
+          Thunder rumbled again, this time louder. Its doomful sound became one
+          with the night, inspiring fear in everything around. The katydids&#39;
+          incessant buzzing stopped abruptly. The barn owls took shelter under
+          their wings. All was quiet except for the murmur of the trees. Something
+          ominous was here, a baleful sense of fate perhaps, just waiting for the
+          right soul to wander in and meet its demise...(<a href="Strange_Attraction.html">read more</a>)</p>
         </div>
         <div class="smallerStory" id="foodFreedom">
           <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
@@ -144,7 +168,14 @@
           "My, oh my," he thought. "Those poor little succulents, stuck in there..."<br>
           Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
           Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
-          "My, oh my, what an excellent idea," he thought to himself...
+          "My, oh my, what an excellent idea," he thought to himself.<br><br>
+          And so, without further ado, he released the chocolate chips.<br>
+          Down and down they poured, out of the bag and all over the countertop,
+          their squeals of joy high-pitched and annoying.<br><br>
+
+          The marshmallow smiled and applauded himself for this act of justice.
+          Keeping food locked up in bags was foul, the epitome of injustice.<br>
+          Who would do such a thing?...
           (<a href="Food_Freedom.html">read more</a>)</p>
         </div>
       </div>
@@ -155,7 +186,12 @@
           mansions, cleaning the nobility's chimneys was cumbersome work.
           Especially during the winter. His clothes were always soiled, smeared
           with black soot. His face, normally pale as snow, took on the ashen hue
-          of someone who had already lost everything...
+          of someone who had already lost everything.<br><br>
+          He guessed he had. Standing this particular morning, on the Grand Duke's
+          chimney, he felt weary. The sun had not yet risen, and the air was cold.
+          This was his favorite time of day. Nobody else was awake, giving him time
+          to look up at the sky as dawn approached. He could see a faint glimmer of
+          stars, fading as the sun slowly started to rise...
           (<a href="The_Chimney_Sweep.html">read more</a>)</p>
         </div>
         <div class="smallerStory" id="marigold">
