--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="smallerStory" id="marigold">
           <a href="Marigold.html"><span>Marigold</span></a><br>
           <p>...this story has yet to be born...<br><br>
-            expected due date: May 16, 2019</p> -->
+            expected due date: May 16, 2019</p>
           <!--(<a href="Marigold.html">read more</a>)</p>-->
         </div>
       </div>
