--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </nav>
     </div>
     <!-- Ralph the Garden Gnome -->
+    <div class="downWithRalph">     <!-- delete -->
     <div class="symbol">
       <p>
         <span id="psi">&#936;</span><br>
@@ -62,7 +63,9 @@
         <span>&#5121;</span><br>
       </p>
     </div>
+    </div>    <!-- delete -->
     <!-- Welcome -->
+    <div class="gummyBear">    <!-- delete -->
     <div id="howdy">
       <span>Howdy there, stranger!</span>
     </div>
@@ -73,7 +76,9 @@
       <span><p>Thou hast cometh to the right place</p></span>
       <span><p>...if thou loveth garden gnomes...</p></span>
     </div>
+    </div>     <!-- delete -->
     <!-- Stories -->
+    <div class="tea">   <!-- delete -->
     <section>
       <div id="stories">
         <p id="storiesTitle">Stories</p>
@@ -140,7 +145,9 @@
         <!--(<a href="Marigold.html">read more</a>)</p>-->
       </div>
     </div>
+    </div>. <!-- delete -->
     <!-- ********* smallerStories ******** -->
+    <div class="tea">      <!--delete -->
     <div class="smallerLinks">
       <div>
         <div class="smallerStory" id="strangeAttraction">
@@ -202,6 +209,7 @@
         </div>
       </div>
     </div> <!-- ******** ********* -->
+    </div>    <!-- delete -->
     <!-- Footer -->
     <footer>
       <div>
