--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       </nav>
     </div>
     <!-- Ralph the Garden Gnome -->
-    <div class="downWithRalph">     <!-- delete -->
     <div class="symbol">
       <p>
         <span id="psi">&#936;</span><br>
@@ -63,9 +62,7 @@
         <span>&#5121;</span><br>
       </p>
     </div>
-    </div>    <!-- delete -->
     <!-- Welcome -->
-    <div class="gummyBear">    <!-- delete -->
     <div id="howdy">
       <span>Howdy there, stranger!</span>
     </div>
@@ -76,9 +73,7 @@
       <span><p>Thou hast cometh to the right place</p></span>
       <span><p>...if thou loveth garden gnomes...</p></span>
     </div>
-    </div>     <!-- delete -->
     <!-- Stories -->
-    <div class="tea">   <!-- delete -->
     <section>
       <div id="stories">
         <p id="storiesTitle">Stories</p>
@@ -145,12 +140,10 @@
         <!--(<a href="Marigold.html">read more</a>)</p>-->
       </div>
     </div>
-    </div>. <!-- delete -->
     <!-- ********* smallerStories ******** -->
-    <div class="tea">      <!--delete -->
     <div class="smallerLinks">
       <div>
-        <div class="smallerStory" id="strangeAttraction">
+        <div class="smallerStory quacker" id="strangeAttraction">
           <a href="Strange_Attraction.html"><span>Strange Attraction</span></a><br>
           <p>Thunder grumbled in the distance, its angry echoes reverberating over the
           mountaintop and into the nearby valley. The forest below awoke from its
@@ -166,7 +159,7 @@
           ominous was here, a baleful sense of fate perhaps, just waiting for the
           right soul to wander in and meet its demise...(<a href="Strange_Attraction.html">read more</a>)</p>
         </div>
-        <div class="smallerStory" id="foodFreedom">
+        <div class="smallerStory quacker" id="foodFreedom">
           <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
           <p>The marshmallow climbed out of his bag, turning the air around him sweet and delightful.<br>
           "Oh my!" He exclaimed. "I must be brave in this new world."<br><br>
@@ -187,7 +180,7 @@
         </div>
       </div>
       <div>
-        <div class="smallerStory" id="chimneySweep">
+        <div class="smallerStory quacker" id="chimneySweep">
           <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
           <p>The air was frigid, as was the chimney sweep's heart. Standing atop
           mansions, cleaning the nobility's chimneys was cumbersome work.
@@ -201,7 +194,7 @@
           stars, fading as the sun slowly started to rise...
           (<a href="The_Chimney_Sweep.html">read more</a>)</p>
         </div>
-        <div class="smallerStory" id="marigold">
+        <div class="smallerStory quacker" id="marigold">
           <a href="Marigold.html"><span>Marigold</span></a><br>
           <p>...this story has yet to be born...<br><br>
             expected due date: May 16, 2019</p>
@@ -209,7 +202,6 @@
         </div>
       </div>
     </div> <!-- ******** ********* -->
-    </div>    <!-- delete -->
     <!-- Footer -->
     <footer>
       <div>
