--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
     <!-- ********* smallerStories ******** -->
     <div class="smallerLinks">
-      <div>
+      <div class="quacker">
         <div class="smallerStory quacker" id="strangeAttraction">
           <a href="Strange_Attraction.html"><span>Strange Attraction</span></a><br>
           <p>Thunder grumbled in the distance, its angry echoes reverberating over the
@@ -179,7 +179,7 @@
           (<a href="Food_Freedom.html">read more</a>)</p>
         </div>
       </div>
-      <div>
+      <div class="quacker>
         <div class="smallerStory quacker" id="chimneySweep">
           <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
           <p>The air was frigid, as was the chimney sweep's heart. Standing atop
