--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
     </div>
     <!-- ********* smallerStories ******** -->
     <div class="smallerLinks">
-      <div class="quacker">
-        <div class="smallerStory quacker" id="strangeAttraction">
+      <div>
+        <div class="smallerStory" id="strangeAttraction">
           <a href="Strange_Attraction.html"><span>Strange Attraction</span></a><br>
           <p>Thunder grumbled in the distance, its angry echoes reverberating over the
           mountaintop and into the nearby valley. The forest below awoke from its
@@ -159,7 +159,7 @@
           ominous was here, a baleful sense of fate perhaps, just waiting for the
           right soul to wander in and meet its demise...(<a href="Strange_Attraction.html">read more</a>)</p>
         </div>
-        <div class="smallerStory quacker" id="foodFreedom">
+        <div class="smallerStory" id="foodFreedom">
           <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
           <p>The marshmallow climbed out of his bag, turning the air around him sweet and delightful.<br>
           "Oh my!" He exclaimed. "I must be brave in this new world."<br><br>
@@ -179,8 +179,8 @@
           (<a href="Food_Freedom.html">read more</a>)</p>
         </div>
       </div>
-      <div class="quacker>
-        <div class="smallerStory quacker" id="chimneySweep">
+      <div>
+        <div class="smallerStory" id="chimneySweep">
           <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
           <p>The air was frigid, as was the chimney sweep's heart. Standing atop
           mansions, cleaning the nobility's chimneys was cumbersome work.
@@ -194,7 +194,7 @@
           stars, fading as the sun slowly started to rise...
           (<a href="The_Chimney_Sweep.html">read more</a>)</p>
         </div>
-        <div class="smallerStory quacker" id="marigold">
+        <div class="smallerStory" id="marigold">
           <a href="Marigold.html"><span>Marigold</span></a><br>
           <p>...this story has yet to be born...<br><br>
             expected due date: May 16, 2019</p>
