--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
         <div class="smallerStory" id="marigold">
           <a href="Marigold.html"><span>Marigold</span></a><br>
-          <p>...this story has yet to be born...<br><br>
+          <p>...this story has yet to be born...<br><br><br><br><br><br><br><br><br><br>
             expected due date: May 16, 2019</p>
           <!--(<a href="Marigold.html">read more</a>)</p>-->
         </div>
