--- a/Strange_Attraction.html
+++ b/Strange_Attraction.html
@@ -127,7 +127,7 @@
            manliness, and . . . yeah, Lisa had a wild imagination.<br ><br >
            More tears streamed down her face as she thought of Lisa. How could she
            do this to her? She was supposed to be her best friend, not a
-           boyfriend-thief. And Julius. Her heart quivered at the thought him.
+           boyfriend-thief. And Julius. Her heart quivered at the thought of him.
            His dark quizzical eyebrows, magnetizing eyes, and slanted smile all
            seemed like a lie, an illusion meant to sweep every girl off her feet.
            Every memory she had of him now was painful. It was like nails had been
@@ -401,7 +401,14 @@
          "My, oh my," he thought. "Those poor little succulents, stuck in there..."<br>
          Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
          Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
-         "My, oh my, what an excellent idea," he thought to himself...
+         "My, oh my, what an excellent idea," he thought to himself.<br><br>
+         And so, without further ado, he released the chocolate chips.<br>
+         Down and down they poured, out of the bag and all over the countertop,
+         their squeals of joy high-pitched and annoying.<br><br>
+
+         The marshmallow smiled and applauded himself for this act of justice.
+         Keeping food locked up in bags was foul, the epitome of injustice.<br>
+         Who would do such a thing?...
          (<a href="Food_Freedom.html">read more</a>)</p>
        </div>
        <div class="story" id="chimneySweep">
@@ -410,7 +417,12 @@
          mansions, cleaning the nobility's chimneys was cumbersome work.
          Especially during the winter. His clothes were always soiled, smeared
          with black soot. His face, normally pale as snow, took on the ashen hue
-         of someone who had already lost everything...
+         of someone who had already lost everything.<br><br>
+         He guessed he had. Standing this particular morning, on the Grand Duke's
+         chimney, he felt weary. The sun had not yet risen, and the air was cold.
+         This was his favorite time of day. Nobody else was awake, giving him time
+         to look up at the sky as dawn approached. He could see a faint glimmer of
+         stars, fading as the sun slowly started to rise...
          (<a href="The_Chimney_Sweep.html">read more</a>)</p>
        </div>
        <div class="story" id="marigold">
@@ -432,7 +444,14 @@
            "My, oh my," he thought. "Those poor little succulents, stuck in there..."<br>
            Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
            Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
-           "My, oh my, what an excellent idea," he thought to himself...
+           "My, oh my, what an excellent idea," he thought to himself.<br><br>
+           And so, without further ado, he released the chocolate chips.<br>
+           Down and down they poured, out of the bag and all over the countertop,
+           their squeals of joy high-pitched and annoying.<br><br>
+
+           The marshmallow smiled and applauded himself for this act of justice.
+           Keeping food locked up in bags was foul, the epitome of injustice.<br>
+           Who would do such a thing?...
            (<a href="Food_Freedom.html">read more</a>)</p>
          </div>
          <div class="smallerStory" id="chimneySweep">
@@ -441,7 +460,12 @@
            mansions, cleaning the nobility's chimneys was cumbersome work.
            Especially during the winter. His clothes were always soiled, smeared
            with black soot. His face, normally pale as snow, took on the ashen hue
-           of someone who had already lost everything...
+           of someone who had already lost everything.<br><br>
+           He guessed he had. Standing this particular morning, on the Grand Duke's
+           chimney, he felt weary. The sun had not yet risen, and the air was cold.
+           This was his favorite time of day. Nobody else was awake, giving him time
+           to look up at the sky as dawn approached. He could see a faint glimmer of
+           stars, fading as the sun slowly started to rise...
            (<a href="The_Chimney_Sweep.html">read more</a>)</p>
          </div>
        </div>
