--- a/Food_Freedom.html
+++ b/Food_Freedom.html
@@ -146,7 +146,13 @@
         whispers with the wind as leaves rustled about. It was 8:30 PM, and the
         night was darker than usual. Much darker. Blackness cloaked everything,
         pervaded everything, was everything. The moon was nowhere to be seen,
-        its luminescence hidden by stormy clouds...(<a href="Strange_Attraction.html">read more</a>)</p>
+        its luminescence hidden by stormy clouds.<br ><br >
+        Thunder rumbled again, this time louder. Its doomful sound became one
+        with the night, inspiring fear in everything around. The katydids&#39;
+        incessant buzzing stopped abruptly. The barn owls took shelter under
+        their wings. All was quiet except for the murmur of the trees. Something
+        ominous was here, a baleful sense of fate perhaps, just waiting for the
+        right soul to wander in and meet its demise...(<a href="Strange_Attraction.html">read more</a>)</p>
       </div>
       <div class="story" id="chimneySweep">
         <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
@@ -154,7 +160,12 @@
         mansions, cleaning the nobility's chimneys was cumbersome work.
         Especially during the winter. His clothes were always soiled, smeared
         with black soot. His face, normally pale as snow, took on the ashen hue
-        of someone who had already lost everything...
+        of someone who had already lost everything.<br><br>
+        He guessed he had. Standing this particular morning, on the Grand Duke's
+        chimney, he felt weary. The sun had not yet risen, and the air was cold.
+        This was his favorite time of day. Nobody else was awake, giving him time
+        to look up at the sky as dawn approached. He could see a faint glimmer of
+        stars, fading as the sun slowly started to rise...
         (<a href="The_Chimney_Sweep.html">read more</a>)</p>
       </div>
       <div class="story" id="marigold">
@@ -175,7 +186,13 @@
           whispers with the wind as leaves rustled about. It was 8:30 PM, and the
           night was darker than usual. Much darker. Blackness cloaked everything,
           pervaded everything, was everything. The moon was nowhere to be seen,
-          its luminescence hidden by stormy clouds...(<a href="Strange_Attraction.html">read more</a>)</p>
+          its luminescence hidden by stormy clouds.<br ><br >
+          Thunder rumbled again, this time louder. Its doomful sound became one
+          with the night, inspiring fear in everything around. The katydids&#39;
+          incessant buzzing stopped abruptly. The barn owls took shelter under
+          their wings. All was quiet except for the murmur of the trees. Something
+          ominous was here, a baleful sense of fate perhaps, just waiting for the
+          right soul to wander in and meet its demise...(<a href="Strange_Attraction.html">read more</a>)</p>
         </div>
         <div class="smallerStory" id="chimneySweep">
           <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
@@ -183,7 +200,12 @@
           mansions, cleaning the nobility's chimneys was cumbersome work.
           Especially during the winter. His clothes were always soiled, smeared
           with black soot. His face, normally pale as snow, took on the ashen hue
-          of someone who had already lost everything...
+          of someone who had already lost everything.<br><br>
+          He guessed he had. Standing this particular morning, on the Grand Duke's
+          chimney, he felt weary. The sun had not yet risen, and the air was cold.
+          This was his favorite time of day. Nobody else was awake, giving him time
+          to look up at the sky as dawn approached. He could see a faint glimmer of
+          stars, fading as the sun slowly started to rise...
           (<a href="The_Chimney_Sweep.html">read more</a>)</p>
         </div>
       </div>
