--- a/generalWriting.html
+++ b/generalWriting.html
@@ -81,7 +81,7 @@
           But feareth not, my lovely friend! For it spinneth among others.<br>
           As they maketh revolutions, Earth maketh revolutions.<br>
           And so, as thou hath learned in school, we all maketh revolutions,<br>
-          As the bush hath gone round and round, thy shall go round and round.<br>
+          As the bus hath gone round and round, thy shall go round and round.<br>
           And she will come round the mountain, feareth not my son, for the sun shall continue <br>
           All of our revolutions."
         </p>
