--- a/generalWriting.html
+++ b/generalWriting.html
@@ -200,7 +200,7 @@
           Bob knows nothing, yet understands everything.<br>
           And the depth of the infinite universe is contained within him.<br>
           Bob's existence is now a contradiction.<br>
-          He feels unsure of it all.<br>
+          He feels unsure of it all.<br><br>
           
           The star is now satisfied.<br>
           Bob is less of a fool and more of a perplexed pea brain.<br>
@@ -377,7 +377,7 @@
             Bob knows nothing, yet understands everything.<br>
             And the depth of the infinite universe is contained within him.<br>
             Bob's existence is now a contradiction.<br>
-            He feels unsure of it all.<br>
+            He feels unsure of it all.<br><br>
 
             The star is now satisfied.<br>
             Bob is less of a fool and more of a perplexed pea brain.<br>
