--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,8 +38,7 @@
     <!-- Content -->
     <div class="quote" id="me">
       <p> Hi there!<br>
-          I am a descendant of a garden gnome.<br>
-          ... &#38; ... this is my first website!<br>
+          I am a descendant of a possum.<br>
       </p>
     </div>
     <!-- Possum Picture -->
