--- a/generalWriting.html
+++ b/generalWriting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nonsensical Tidbits of Gibberish (@nightdahlia)</title>
+    <title>Nonsensical Tidbits of Gibberish (@inkyfawn)</title>
     <link rel="stylesheet" href="dahliaReset.css" type="text/css">
     <link rel="stylesheet" href="dahlia.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Handlee" rel="stylesheet">
@@ -11,7 +11,7 @@
     <div class="menu">
       <nav>
         <ul>
-          <span>@nightdahlia</span>
+          <span>@inkyfawn</span>
           <a href="index.html"><span>Home</span></a>
           <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
           <a href="videos.html"><span>Videos</span></a>
@@ -22,7 +22,7 @@
     <div class="smallerMenu">
       <nav>
         <ul>
-          <span id="nightDahliaSym">@nightdahlia</span>
+          <span id="nightDahliaSym">@inkyfawn</span>
         </ul>
         <br>
         <ul>
@@ -393,9 +393,9 @@
     <!-- Footer -->
     <footer>
       <div>
-        <span>@nightdahlia</span>
-        <p>Last Updated: August 25, 2018</p>
-        <a target="_blank" title="@nightdahlia" href="http://www.instagram.com/nightdahlia"><img alt="@nightdahlia" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+        <span>@inkyfawn</span>
+        <p>Last Updated: January 2, 2019</p>
+        <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn"><img alt="@inkyfawn" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       </div>
     </footer>
   </body>
