--- a/generalWriting.html
+++ b/generalWriting.html
@@ -220,21 +220,16 @@
             "My crazy pigeon flew away into the sunset.<br><br>At dawn, a dreamy dove
             flew into view.<br><br>At noon, a lucky duck crossed my path.<br><br> And
             as the sun set again, my crazy pigeon flew back to me."
-          </p>
-          <p> <!-- Invisible part -->
+            <br><br> <!-- Invisible part -->
+            <br><br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br><br>
             These sentences will be hidden.<br><br>
             These sentences will scroll.<br><br>
             These sentences will not be visible to the user.<br><br>
-            These sentences will enable the yellow to appear around the box when<br>
-            touching the screen.<br><br>
-            Does this work?<br><br>
-            We shall see.<br><br>
-            Invisible<br><br>
-            Invisible<br><br>
-            Invisible<br><br>
-            Invisible<br><br>
-            Invisible<br><br>
-            Invisible<br><br>
           </p>
         </div>
         <div class="smallerStory" id="pancake">
