--- a/generalWriting.html
+++ b/generalWriting.html
@@ -232,6 +232,7 @@
               These sentences will scroll.<br><br>
               These sentences will not be visible to the user.<br><br>-->
             </p>
+            <p>Is this invisible?</p>
           </div>
         </div>
         <div class="smallerStory" id="pancake">
