--- a/generalWriting.html
+++ b/generalWriting.html
@@ -221,18 +221,8 @@
               "My crazy pigeon flew away into the sunset.<br><br>At dawn, a dreamy dove
               flew into view.<br><br>At noon, a lucky duck crossed my path.<br><br> And
               as the sun set again, my crazy pigeon flew back to me."
-              <!--<br><br> <!-- Invisible part -->
-              <!--<br><br>
-              <br><br>
-              <br><br>
-              <br><br>
-              <br><br>
-              <br><br>
-              These sentences will be hidden.<br><br>
-              These sentences will scroll.<br><br>
-              These sentences will not be visible to the user.<br><br>-->
+              <br><br> <!-- Invisible part -->
             </p>
-            <p>Is this invisible?</p>
           </div>
         </div>
         <div class="smallerStory" id="pancake">
