--- a/generalWriting.html
+++ b/generalWriting.html
@@ -215,6 +215,24 @@
     <!-- ********* smaller ************ -->
     <div class="smallerLinks">
       <div>
+        <div class="smallerStory" id="fakepigeon">
+          <div>
+            <p>
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+              <br><br> <!-- Invisible part -->
+            </p>
+          </div>
+        </div>
         <div class="smallerStory" id="pigeon">
           <div>
             <p> <!-- Have these in their own boxes, maybe pop out on the page?? -->
