--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Inky Fawn</title>
+    <title>Home @inkyfawn</title>
     <link rel="stylesheet" href="dahliaReset.css" type="text/css">
     <link rel="stylesheet" href="dahlia.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Junge|Raleway|Yanone+Kaffees|Handlee" rel="stylesheet">
@@ -206,7 +206,7 @@
     <footer>
       <div>
         <span>@inkyfawn</span>
-        <p>Last Updated: January 2, 2019</p>
+        <p>Last Updated: January 3, 2019</p>
         <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn"><img alt="@inkyfawn" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       </div>
     </footer>
