--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,7 +38,11 @@
     <!-- Content -->
     <div class="quote" id="me">
       <p> Hi there!<br>
-          I am a descendant of a possum.<br>
+          I am the Inky Fawn.<br>
+          Here's some imaginary facts about my fictitious life:<br>
+          1. I am a descendant of a possum.<br>
+          2. My true love is a garden gnome.<br>
+          3. A fruit fly is my guardian angel.<br>
       </p>
     </div>
     <!-- Possum Picture -->
@@ -48,8 +52,8 @@
     <!-- Footer -->
     <footer>
       <div>
-        <span>@nightdahlia</span>
-        <p>Last Updated: January 2, 2019</p>
+        <span>@inkyfawn</span>
+        <p>Last Updated: January 3, 2019</p>
         <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn"><img alt="@inkyfawn" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       </div>
     </footer>
