--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home @inkyfawn</title>
+    <title>Home (@inkyfawn)</title>
     <link rel="stylesheet" href="dahliaReset.css" type="text/css">
     <link rel="stylesheet" href="dahlia.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Junge|Raleway|Yanone+Kaffees|Handlee" rel="stylesheet">
