--- a/Strange_Attraction.html
+++ b/Strange_Attraction.html
@@ -425,6 +425,18 @@
          stars, fading as the sun slowly started to rise...
          (<a href="The_Chimney_Sweep.html">read more</a>)</p>
        </div>
+       <div class="story" id="pumpkinsDelirium">
+         <a href="A_Pumpkins_Delirium.html"><span>A Pumpkin's Delirium</span></a><br>
+         <p>The orange pumpkin laughed degradingly at himself.<br><br> 
+           It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
+           watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
+           and he shivered at the thought of the horrible wrong that’d been done to him. The 
+           knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
+           “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
+           He liked how it sounded—talking out loud to himself. He continued on.<br><br>
+           “. . . She abducted me from my family . . .”<br><br>
+         (<a href="A_Pumpkins_Delirium.html">read more</a>)</p>
+       </div>
        <div class="story" id="marigold">
          <a href="Marigold.html"><span>Marigold</span></a><br>
          <p>...this story has yet to be born...<br><br>
@@ -470,6 +482,18 @@
          </div>
        </div>
        <div>
+         <div class="smallerStory" id="pumpkinsDelirium">
+           <a href="A_Pumpkins_Delirium.html"><span>A Pumpkin's Delirium</span></a><br>
+           <p>The orange pumpkin laughed degradingly at himself.<br><br> 
+             It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
+             watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
+             and he shivered at the thought of the horrible wrong that’d been done to him. The 
+             knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
+             “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
+             He liked how it sounded—talking out loud to himself. He continued on.<br><br>
+             “. . . She abducted me from my family . . .”<br><br>
+           (<a href="A_Pumpkins_Delirium.html">read more</a>)</p>
+         </div>
          <div class="smallerStory" id="marigold">
            <a href="Marigold.html"><span>Marigold</span></a><br>
            <p>...this story has yet to be born...<br><br>
