--- a/Marigold.html
+++ b/Marigold.html
@@ -98,6 +98,18 @@
         stars, fading as the sun slowly started to rise...
         (<a href="The_Chimney_Sweep.html">read more</a>)</p>
       </div>
+      <div class="story" id="pumpkinsDelirium">
+         <a href="A_Pumpkins_Delirium.html"><span>A Pumpkin's Delirium</span></a><br>
+         <p>The orange pumpkin laughed degradingly at himself.<br><br> 
+           It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
+           watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
+           and he shivered at the thought of the horrible wrong that’d been done to him. The 
+           knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
+           “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
+           He liked how it sounded—talking out loud to himself. He continued on.<br><br>
+           “. . . She abducted me from my family . . .”<br><br>
+         (<a href="A_Pumpkins_Delirium.html">read more</a>)</p>
+       </div>
     </div>
     <!-- ********* smallerStories ******** -->
     <div class="smallerLinks">
@@ -153,6 +165,18 @@
           stars, fading as the sun slowly started to rise...
           (<a href="The_Chimney_Sweep.html">read more</a>)</p>
         </div>
+        <div class="smallerStory" id="pumpkinsDelirium">
+           <a href="A_Pumpkins_Delirium.html"><span>A Pumpkin's Delirium</span></a><br>
+           <p>The orange pumpkin laughed degradingly at himself.<br><br> 
+             It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
+             watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
+             and he shivered at the thought of the horrible wrong that’d been done to him. The 
+             knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
+             “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
+             He liked how it sounded—talking out loud to himself. He continued on.<br><br>
+             “. . . She abducted me from my family . . .”<br><br>
+           (<a href="A_Pumpkins_Delirium.html">read more</a>)</p>
+         </div>
       </div>
     </div> <!-- ******** ********* -->
     <!-- <p class="scroll"><a href="#smallerTop" id="hiddenTop">[top]</a></p> -->
