--- a/A_Pumpkins_Delirium.html
+++ b/A_Pumpkins_Delirium.html
@@ -36,7 +36,7 @@
       </nav>
     </div>
     <!-- Story -->
-    <div class="containerStory">
+    <div class="containerStory" id="APD">
       <div class="quote mainstory">
         <div>
           &#x1F383;
@@ -216,6 +216,8 @@
            Who would do such a thing?...
            (<a href="Food_Freedom.html">read more</a>)</p>
          </div>
+       </div>
+       <div>
          <div class="smallerStory" id="chimneySweep">
            <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
            <p>The air was frigid, as was the chimney sweep's heart. Standing atop
@@ -230,8 +232,6 @@
            stars, fading as the sun slowly started to rise...
            (<a href="The_Chimney_Sweep.html">read more</a>)</p>
          </div>
-       </div>
-       <div>
          <div class="smallerStory" id="marigold">
            <a href="Marigold.html"><span>Marigold</span></a><br>
            <p>...this story has yet to be born...<br><br>
