--- a/A_Pumpkins_Delirium.html
+++ b/A_Pumpkins_Delirium.html
@@ -75,7 +75,7 @@
            Laughter poured from his poorly cut mouth. And his voice dripped with perverted insanity. 
            “She carved my face . . . she mutilated by body . . . she took my guts out . . .”<br><br>
 
-           A nearby chipmunk preparing for her evening meal dropped her hickory nut in shock. What a 
+           A nearby squirrel preparing for her evening meal dropped her hickory nut in shock. What a 
            creepy pumpkin, she thought. She surveyed him warily: equilateral eyes, a triangular nose, 
            and a sexily lacerated mouth. Nut-almighty! The pumpkin was hot and not just because of the 
            candlelight burning within him!<br><br>
